Empty footer for ui look, move main text into a title position

--- a/client/src/Components/Main/index.css
+++ b/client/src/Components/Main/index.css
@@ -11,7 +11,8 @@
     margin: auto;
     width: 50%;
     /* Figure out how to center it properly, if this below doesn't work */
-    transform: translateY(600%);
+    /* transform: translateY(600%); */
+    transform: translateY(50%);
 }
 
 .Large {
