--- a/client/src/Components/Main/index.css
+++ b/client/src/Components/Main/index.css
@@ -3,7 +3,7 @@
 .Main {
     background-color: hsl(195, 53%, 79%, 60%);
     /* height: 100%; */
-    height: 87.5vh;
+    height: 92vh; /*91.5 between nav/footer*/
 }
 
 .Center {
