Added important to nav css, something was overriding it

--- a/client/src/Components/Navbar/index.css
+++ b/client/src/Components/Navbar/index.css
@@ -1,4 +1,4 @@
 .Navbar {
-    background-color: #001529;
-    height: 5.5vh;
+    background-color: #001529 !important;
+    height: 5.5vh !important;
 }
