Finished initial Light/Dark mode switch: css classes toggling nav/footer

--- a/client/src/Components/Navbar/index.css
+++ b/client/src/Components/Navbar/index.css
@@ -1,4 +1,14 @@
 .Navbar {
-    background-color: #001529 !important;
     height: 5.5vh !important;
+    width: 100% !important;
+}
+
+.navdark {
+    background-color: #001529 !important;
+    color: white;
+}
+
+.navlight {
+    background-color: white !important;
+    color: #001529
 }
