--- a/client/src/Components/Footer/index.css
+++ b/client/src/Components/Footer/index.css
@@ -1,8 +1,16 @@
 .Footer {
     position: absolute;
     bottom: 0;
-    background-color: black;
-    color: white;
     width: 100%;
     height: 3vh;
+}
+
+.footdark {
+    background-color: #001529 !important;
+    color: white;
+}
+
+.footlight {
+    background-color: white !important;
+    color: #001529;
 }
