Synced light/dark theme across all component pages

--- a/client/src/Components/Footer/index.css
+++ b/client/src/Components/Footer/index.css
@@ -11,6 +11,6 @@
 }
 
 .footlight {
-    background-color: white !important;
+    background-color: rgb(155, 221, 223) !important;
     color: #001529;
 }
