Added cards colors and WakaTime Embed to profile

--- a/client/src/Components/Main/index.css
+++ b/client/src/Components/Main/index.css
@@ -8,7 +8,7 @@
 }
 
 
-.main-light {
+.main-light{
     background-color: #CBF1F5;
     color: black
 }
@@ -16,6 +16,10 @@
 .main-dark {
     background-color: #1E2022;
     color: white
+}
+
+.cardBG {
+    background-color: red;
 }
 
 
