--- a/client/src/Components/Footer/index.css
+++ b/client/src/Components/Footer/index.css
@@ -1,6 +1,6 @@
 .Footer {
-    position: absolute;
-    bottom: 0;
+    /* position: absolute; */
+    /* bottom: 0; */
     width: 100%;
     height: 3vh;
 }
