--- a/client/src/Components/Main/index.css
+++ b/client/src/Components/Main/index.css
@@ -4,9 +4,9 @@
     background-color: hsl(195, 53%, 79%, 60%);
     /* height: 100%; */
     height: 91.5vh; /* between nav/footer */
+    overflow: auto;
 
 }
-
 
 .main-light{
     background-color: #CBF1F5;
