--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,13 @@ table {
 	text-align: center;
 }
 
+.flex-center {
+    display: flex;
+    justify-content: center;
+	align-items: center;
+	margin: auto;
+}
+
 .page-title {
     font-size: xx-large;
 	margin-top: 20px;
