--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,17 @@
 #login-btn-nav {
     margin-right: 1%;
 }
+
+.navatar {
+    margin: 3px 3px 0px 0px !important;
+}
+
+.nav-right {
+    float: right;
+}
+
+/* @media screen and (max-width: 763px) {
+	.nav-right {
+        float: left;
+    }
+} */
