--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,7 @@ table {
 	bottom: 0;
 	width: 100%;
 	text-align: center;
-	background-color: red;
+	background-color: rgb(228, 228, 228);
 	height: 55px;
 } 
 
