--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,3 +2,10 @@
     width: 100%;
     background-color: rgb(255, 255, 255);
 }
+
+.navlink {
+    margin-top: 4px !important;
+    margin: 0px;
+    padding: 0px;
+    text-decoration: none !important;
+}
