--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,20 +1,7 @@
-#home-box {
-    background-color: rgb(202, 202, 202);
-    width: 100%;
-    height: calc(100vh - 55px);
+.home-rCards {
+    margin: 0 16px;
 }
 
-/* Shadow Glow Gradient pulled from http://jsfiddle.net/urwjb06x/1/ */
-.projCard-main {
-    margin: 0px 30px;
-    padding: 40px;
-    background-image: 
-        linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0)),
-        linear-gradient(90deg, rgba(255,255, 255,0), rgb(255, 255, 255), rgba(255,255,255,0)) !important;
-    border:none;
-    /* background-color: transparent !important; */
-    background-repeat: no-repeat !important;
-    background-position: 0 0, 0 1px !important;
-    background-size: 100% 1px !important;
-    box-shadow: rgba(100, 100, 100, 0.8) 0 0 20px;
+.home-cCards {
+    padding: 16px;
 }
