--- a/src/Components/Theme/Theme.css
+++ b/src/Components/Theme/Theme.css
@@ -1,7 +1,8 @@
 #page-container {
     /* background-color: rgb(78, 78, 78); */
-    height: 100vh;
+    /* height: 100vh; */
     /* color: white; */
+    margin: 0;
 }
   
   
