--- a/src/Pages/Github/Github.css
+++ b/src/Pages/Github/Github.css
@@ -5,5 +5,10 @@
 
 #gh-container {
     width: 100% !important;
-    height: 90vh !important;
+    height: 80vh !important;
+    padding: 5px 0px;
+    background-color: aliceblue;
+    border-color: rgb(218, 238, 255);
+    border-style: solid;
+    border-radius: 10px;
 }
