Implement github repo api usage

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,16 @@
 .hide {
     display: none;
 }
+
+.margin-right {
+    margin-left: auto; 
+    margin-right: 0;
+}
+
+.float-right {
+    float: right;
+}
+
+.tiny {
+    font-size: small;
+}
