--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,42 @@
-.text-center {
-    text-align: center;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
-.elem-center {
-    justify-content: center;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.vert-center {
-    align-content: center;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.center {
-
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-.main-title {
-    font-size: 40px;
-    margin: 1%;
+.card {
+  padding: 2em;
 }
 
-.main-subtitle {
-    font-size: 30px;
-    margin: 1%;
-}
-
-.shown {
-    display: inherit;
-}
-
-.hide {
-    display: none;
-}
-
-.margin-right {
-    margin-left: auto; 
-    margin-right: 0;
-}
-
-.float-right {
-    float: right;
-}
-
-.tiny {
-    font-size: small;
-}
-
-.newTabIcon::after {
-    content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
-    margin: 0 3px 0 5px;
+.read-the-docs {
+  color: #888;
 }
